--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
         <figure>
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
+          <figcaption>Cats <em>love</em> lasagna. <p style="color:LightGray;">Is that Garfield reference?</p></figcaption>  
         </figure>
         <h3>Top 3 things cats hate:</h3>
         <ol>
