--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <ol>
           <li>flea treatment</li>
           <li>thunder</li>
+          <li>Pruk</li>
           <li>other cats</li>
         </ol>
         <figure>
