--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html>
+
 <html>
+
+  <header>
+    <title>Cat pics lol.</title>
+  </header>
+  
   <body>
     <main>
       <h1>CatPhotoApp</h1>
@@ -18,7 +25,7 @@
         </ul>
         <figure>
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna. <p style="color:LightGray;">Is that Garfield reference?</p></figcaption>  
+          <figcaption>Cats <em>love</em> lasagna. <a style="color:LightGray;">Is that Garfield reference?</a></figcaption>  
         </figure>
         <h3>Top 3 things cats hate:</h3>
         <ol>
@@ -34,10 +41,12 @@
       </section>
       <section>
         <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
+        <form action="https://mybeautifulnoob.github.io/Cat/">
           <label><input type="radio"> Indoor</label>
           <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-          <button type="submit">Submit</button>
+          <fieldset>
+            <button type="submit">Submit</button> <label for=""></label>
+          </fieldset>
         </form>
       </section>
     </main>
